--- a/Views/Pages/DashboardPage.xaml
+++ b/Views/Pages/DashboardPage.xaml
@@ -6,7 +6,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:viewmodels="clr-namespace:VCenterMigrationTool.ViewModels"
-    xmlns:helpers="clr-namespace:VCenterMigrationTool.Helpers"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance viewmodels:DashboardViewModel, IsDesignTimeCreatable=False}"
     Title="DashboardPage"
@@ -17,43 +16,95 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock
-            Grid.Row="0"
-            FontSize="24"
-            FontWeight="Medium"
-            Text="Export / Import vCenter Configuration" />
+        <TextBlock Grid.Row="0" FontSize="24" FontWeight="Medium" Text="Dashboard &amp; Status" />
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,20,0,10">
-            <ui:Button
-                Content="Export vDS &amp; Permissions"
-                Appearance="Primary"
-                Icon="ArrowUpload24"
-                Command="{Binding ViewModel.ExportConfigurationCommand}"
-                IsEnabled="{Binding ViewModel.IsBusy, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=inverse}"/>
+        <Grid Grid.Row="1" Margin="0,20,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="20" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
-            <ui:Button
-                Content="Import vDS &amp; Permissions"
-                Appearance="Secondary"
-                Icon="ArrowDownload24"
-                Command="{Binding ViewModel.ImportConfigurationCommand}"
-                Margin="10,0,0,0"
-                IsEnabled="{Binding ViewModel.IsBusy, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=inverse}"/>
+            <ui:CardControl Grid.Column="0">
+                <StackPanel>
+                    <TextBlock Text="Source vCenter" FontWeight="Medium" />
+                    <Grid Margin="0,10,0,10">
+                        <ComboBox
+                            x:Name="SourceComboBox"
+                            ItemsSource="{Binding ViewModel.Profiles}"
+                            SelectedItem="{Binding ViewModel.SelectedSourceProfile}"
+                            DisplayMemberPath="Name" />
+                        <TextBlock
+                            IsHitTestVisible="False"
+                            Text="Select a source profile"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Left"
+                            Margin="12,0,0,0"
+                            Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                            Visibility="{Binding ElementName=SourceComboBox, Path=SelectedItem, Converter={StaticResource NullToVisibilityConverter}}" />
+                    </Grid>
+                    <TextBlock Text="{Binding ViewModel.SourceConnectionStatus}" Margin="0,0,0,10" Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
+                    <ui:Button Content="Connect" Appearance="Primary" Command="{Binding ViewModel.ConnectSourceCommand}" />
+                </StackPanel>
+            </ui:CardControl>
 
-            <ui:ProgressRing 
-                Margin="10,0,0,0" 
-                IsIndeterminate="True" 
-                Visibility="{Binding ViewModel.IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-        </StackPanel>
+            <ui:CardControl Grid.Column="2">
+                <StackPanel>
+                    <TextBlock Text="Target vCenter" FontWeight="Medium" />
+                    <Grid Margin="0,10,0,10">
+                        <ComboBox
+                            x:Name="TargetComboBox"
+                            ItemsSource="{Binding ViewModel.Profiles}"
+                            SelectedItem="{Binding ViewModel.SelectedTargetProfile}"
+                            DisplayMemberPath="Name" />
+                        <TextBlock
+                            IsHitTestVisible="False"
+                            Text="Select a target profile"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Left"
+                            Margin="12,0,0,0"
+                            Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                            Visibility="{Binding ElementName=TargetComboBox, Path=SelectedItem, Converter={StaticResource NullToVisibilityConverter}}" />
+                    </Grid>
+                    <TextBlock Text="{Binding ViewModel.TargetConnectionStatus}" Margin="0,0,0,10" Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
+                    <ui:Button Content="Connect" Command="{Binding ViewModel.ConnectTargetCommand}" />
+                </StackPanel>
+            </ui:CardControl>
+        </Grid>
 
-        <ui:TextBox
-            Grid.Row="2"
-            Text="{Binding ViewModel.ScriptOutput, Mode=OneWay}"
-            IsReadOnly="True"
-            AcceptsReturn="True"
-            VerticalScrollBarVisibility="Auto"
-            FontFamily="Consolas"/>
+        <TextBlock Grid.Row="2" Margin="0,20,0,0" FontSize="20" FontWeight="Medium" Text="Export / Import vCenter Configuration" />
+
+        <Grid Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,10,0,10">
+                <ui:Button
+                    Content="Export vDS &amp; Permissions"
+                    Appearance="Primary"
+                    Icon="ArrowUpload24"
+                    Command="{Binding ViewModel.ExportConfigurationCommand}"/>
+                <ui:Button
+                    Content="Import vDS &amp; Permissions"
+                    Appearance="Secondary"
+                    Icon="ArrowDownload24"
+                    Command="{Binding ViewModel.ImportConfigurationCommand}"
+                    Margin="10,0,0,0"/>
+                <ui:ProgressRing Margin="10,0,0,0" IsIndeterminate="True" Visibility="{Binding ViewModel.IsBusy, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            </StackPanel>
+
+            <ui:TextBox
+                Grid.Row="1"
+                Text="{Binding ViewModel.ScriptOutput, Mode=OneWay}"
+                IsReadOnly="True"
+                AcceptsReturn="True"
+                VerticalScrollBarVisibility="Auto"
+                FontFamily="Consolas"/>
+        </Grid>
     </Grid>
 </Page>
